--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -25,18 +25,10 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img
-              class="img-fluid"
-              alt="Responsive image"
-              src="{{ product.image.url }}"
-            />
+            <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}" />
             <div class="card-body">
               <p class="card-text">
-                <a
-                  class="text-dark text-decoration-none"
-                  href="{{ product.get_absolute_url }}"
-                  >{{ product.title }}</a
-                >
+                <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">9min read</small>
