--- a/templates/store/products/single.html
+++ b/templates/store/products/single.html
@@ -36,7 +36,12 @@ product.name }} {% endblock %} {% block content %}
                 </select>
               </div>
               <div class="col-6 text-end">
-                <button type="button" class="btn btn-secondary btn-sm">
+                <button
+                  type="button"
+                  id="add-button"
+                  value="{{product.id}}"
+                  class="btn btn-secondary btn-sm"
+                >
                   Add to basket
                 </button>
               </div>
@@ -47,4 +52,22 @@ product.name }} {% endblock %} {% block content %}
     </div>
   </main>
 </div>
+
+<script>
+  $(document).on("click", "#add-button", function (e) {
+    e.preventDefault();
+    $.ajax({
+      type: "POST",
+      url: '{% url "basket:basket_add" %}',
+      data: {
+        productid: $("#add-button").val(),
+        csrfmiddlewaretoken: "{{csrf_token}}",
+        action: "post",
+      },
+      success: function (json) {},
+      error: function (xhr, errmsg, err) {},
+    });
+  });
+</script>
+
 {% endblock %}
