Implemented display of total number of basket items on submission, completing add functionality

--- a/templates/store/products/single.html
+++ b/templates/store/products/single.html
@@ -56,15 +56,20 @@ product.name }} {% endblock %} {% block content %}
 <script>
   $(document).on("click", "#add-button", function (e) {
     e.preventDefault();
+    {% comment %} console.log($("#select option:selected").text()); {% endcomment %}
     $.ajax({
       type: "POST",
       url: '{% url "basket:basket_add" %}',
       data: {
         productid: $("#add-button").val(),
+        productqty: $("#select option:selected").text(),
         csrfmiddlewaretoken: "{{csrf_token}}",
         action: "post",
       },
-      success: function (json) {},
+      success: function (json) {
+        {% comment %} console.log(json) {% endcomment %}
+        document.getElementById("basket-qty").innerHTML = json.qty
+      },
       error: function (xhr, errmsg, err) {},
     });
   });
