--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -64,4 +64,23 @@
     </div>
 </main>
 
+<script>
+  $(document).on("click", ".delete-button", function (e) {
+    e.preventDefault();
+    $.ajax({
+      type: "POST",
+      url: '{% url "basket:basket_delete" %}',
+      data: {
+        productid: $(this).data('index'),
+        csrfmiddlewaretoken: "{{csrf_token}}",
+        action: "post",
+      },
+      success: function (json) {
+      },
+      error: function (xhr, errmsg, err) {},
+    });
+  });
+</script>
+
+
 {%endblock%}
