Handled immediate delete of product dom item on successful delete

--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -65,21 +65,23 @@
 </main>
 
 <script>
-  $(document).on("click", ".delete-button", function (e) {
-    e.preventDefault();
-    $.ajax({
-      type: "POST",
-      url: '{% url "basket:basket_delete" %}',
-      data: {
-        productid: $(this).data('index'),
-        csrfmiddlewaretoken: "{{csrf_token}}",
-        action: "post",
-      },
-      success: function (json) {
-      },
-      error: function (xhr, errmsg, err) {},
+    $(document).on("click", ".delete-button", function (e) {
+        e.preventDefault();
+        var prodid = $(this).data('index');
+        $.ajax({
+            type: "POST",
+            url: '{% url "basket:basket_delete" %}',
+            data: {
+                productid: $(this).data('index'),
+                csrfmiddlewaretoken: "{{csrf_token}}",
+                action: "post",
+            },
+            success: function (json) {
+                $('.product-item[data-index="' + prodid + '"]').remove();
+            },
+            error: function (xhr, errmsg, err) {},
+        });
     });
-  });
 </script>
 
 
