--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -64,9 +64,8 @@
                         <span class="fs15 fw500">Shop</span>
                     </button>
 
-                    {% comment %} <
                     {% if user.is_authenticated %}
-                    a type="button" role="button" href="{% url "account:logout" %}"
+                    <a type="button" role="button" href="{% url "account:logout" %}"
                         class="btn btn-outline-secondary border-0 basket-btn">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -77,8 +76,8 @@
                             </svg>
                         </div>
                         <span class="fs15 fw500">Logout</span>
-                    </a> {% endcomment %}
-                    {% comment %} {% else %}
+                    </a>
+                    {% else %}
                     <a type="button" role="button" href="{% url "account:login" %}"
                         class="btn btn-outline-secondary border-0 basket-btn">
                         <div>
@@ -91,7 +90,7 @@
                         </div>
                         <span class="fs15 fw500">Login</span>
                     </a>
-                    {% endif %} {% endcomment %}
+                    {% endif %}
 
 
                     <a type="button" role="button" href="{% url "account:dashboard" %}"
